# revivAl

./: README.md  create_uvenv  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  pytest.yml
revivAI/: __ini__.py  base.py
revivai/: __init__.py  base.py
src/: __init__.py
src/revivai/: __init__.py  base.py
src/revival/: __init__.py  base.py  load_model.py  loading_model.py
src/utils/: utils.py
test/: requirements_test.txt  test_base.py
